Fix password eyelid alignment

--- a/assets/src/purge-css/twentytwentyone.css
+++ b/assets/src/purge-css/twentytwentyone.css
@@ -1386,6 +1386,10 @@ a:hover {
 	background-color: #f1f1f1;
 }
 
+.site a:focus:not(.wp-block-button__link):not(.wp-block-file__button).custom-logo-link {
+	background: none;
+}
+
 .site a:focus:not(.wp-block-button__link):not(.wp-block-file__button) img {
 	outline: 2px dotted var(--wp--style--color--link, var(--global--color-primary));
 }
@@ -2557,6 +2561,10 @@ h1.page-title {
 .reply {
 	font-size: var(--global--font-size-sm);
 	line-height: var(--global--line-height-heading);
+}
+
+.pingback .url {
+	font-family: var(--global--font-primary);
 }
 
 .comment-respond {
